--- a/TP/css/stylesheet.css
+++ b/TP/css/stylesheet.css
@@ -1,3 +1,44 @@
 body{
-    background-color: red;
+    background-color: rgb(196, 227, 248);
 }
+
+.topflex{
+    display: flex;
+    justify-content: flex-start;
+    font-family: arial;
+}
+
+.logo{
+    background-color: transparent;
+    padding: 50px;
+    margin-left: 20px;
+    font-size: 40px;
+    font-weight: bold;
+}
+
+.toplinks{
+    font-size: 20px;
+    color: black;
+    padding-right: auto;
+}
+
+.Chaussures{
+    color: black;
+}
+
+.Mobilier{
+    color: black;
+
+}
+
+.Fruits{
+    color: black;
+
+}
+
+.barreblanche{
+    background-color: whitesmoke;
+    padding: 2px;
+    margin-top: 5px;
+}
+
