--- a/TP/css/stylesheet.css
+++ b/TP/css/stylesheet.css
@@ -2,12 +2,13 @@ body{
     background-color: rgb(196, 227, 248);
 }
 
+
+
 .topflex{
     display: flex;
     justify-content: flex-start;
     font-family: arial;
 }
-
 .logo{
     background-color: transparent;
     padding: 50px;
@@ -15,10 +16,6 @@ body{
     font-size: 40px;
     font-weight: bold;
 }
-
-
-
-
 .Chaussures{
     background-color: transparent;
     padding: 70px;
@@ -40,8 +37,6 @@ body{
     font-size: 20px;
     font-weight: bold;
 }
-
-
 .searchlogo{
     background-color: red;
     padding: 50px;
@@ -53,13 +48,27 @@ body{
     padding: 50px;
     margin-right: auto;
 }
-
-
-
-
 .barreblanche{
     background-color: whitesmoke;
     padding: 2px;
     margin-top: 5px;
+    justify-content: flex-end;
 }
 
+
+
+
+
+.contentflex{
+    display: flex;
+    justify-content: flex-start;
+}
+.pageindicator{
+    font-size: 15px;
+    padding-left: 150px;
+    padding-top: 60px;
+}
+.fruitimage{
+    padding: 30px;
+    padding-top: 150px;
+}
